--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/styles.css" />
   </head>
   <body>
-  <div class="bg-img">
+  <div class="background">
     <h1>Broadway Design</h1>
     <ul>
       <li>Home</li>
@@ -16,7 +16,7 @@
       <li>Contact</li>
     </ul>
   </div>
-  <div class="our-process">
+  <div class="page-info">
     <h2>Our Process</h2>
     <p><img src="./resources/images/identify.svg"/></p>
     <h3>Identify</h3>
@@ -28,8 +28,8 @@
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
   </div>
-  <h2 class="bg-img">Designed in New York</h2>
-  <div>
+  <h3 class="background">Designed in New York</h3>
+  <div class="page-info">
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
     <h3>Team</h3>
@@ -38,6 +38,16 @@
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
+  </div>
+  <div class="footer">
+    <span class="copyright"></span>
+    <nav>
+      <li>Home</li>
+      <li>About</li>
+      <li>Work</li>
+      <li>Team</li>
+      <li>Contact</li>
+    </nav>
   </div>
   </body>
 </html>
