Final css and html before first commit to github

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/styles.css" />
   </head>
   <body>
-  <div class="background">
+  <div class="background white-font">
     <h1>Broadway Design</h1>
     <ul>
       <li>Home</li>
@@ -28,7 +28,7 @@
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
   </div>
-  <h3 class="background">Designed in New York</h3>
+  <h3 class="background white-font">Designed in New York</h3>
   <div class="page-info">
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
@@ -39,7 +39,7 @@
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
   </div>
-  <div class="footer">
+  <div class="footer white-font">
     <span class="copyright"></span>
     <nav>
       <li>Home</li>
