--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link rel="stylesheet" type="text/css" href="/resources/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./resources/css/styles.css" />
   </head>
   <body>
   <div class="background white-font">
@@ -18,13 +18,13 @@
   </div>
   <div class="page-info">
     <h2>Our Process</h2>
-    <p><img src="/resources/images/identify.svg"/></p>
+    <p><img src="./resources/images/identify.svg"/></p>
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
-    <p><img src="/resources/images/understand.svg"/></p>
+    <p><img src="./resources/images/understand.svg"/></p>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
-    <p><img src="/resources/images/execute.svg"/></p>
+    <p><img src="./resources/images/execute.svg"/></p>
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
   </div>
