Yet another commit

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <p>Twitter: @test</p>
   </div>
   <div class="footer white-font">
-    <span class="copyright"></span>
-    <nav>
+    <span class="copyright">&copy; Broadway</span>
+    <ul>
       <li>Home</li>
       <li>About</li>
       <li>Work</li>
       <li>Team</li>
       <li>Contact</li>
-    </nav>
+    </ul>
   </div>
   </body>
 </html>
