Major refactoring of html and css

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/styles.css" />
   </head>
   <body>
-  <div class="background white-font">
+  <div class="background" id="home">
     <h1>Broadway Design</h1>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Work</li>
-      <li>Team</li>
-      <li>Contact</li>
+    <p><a href="#home">Home</a></p>
+    <p><a href="#process">Process</a></p>
+    <p><a href="#work">Work</a></p>
+    <p><a href="#team">Team</a></p>
+    <p><a href="#contact">Contact</a></p>
     </ul>
   </div>
-  <div class="page-info">
+  <div class="section" id="process">
     <h2>Our Process</h2>
     <p><img src="./resources/images/identify.svg"/></p>
     <h3>Identify</h3>
@@ -28,26 +27,34 @@
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
   </div>
-  <h3 class="background white-font">Designed in New York</h3>
-  <div class="page-info">
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
-    <p>Twitter: @test</p>
+  <div class="background">
+    <h3>Designed in New York</h3>
   </div>
-  <div class="footer white-font">
-    <span class="copyright">&copy; Broadway</span>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Work</li>
-      <li>Team</li>
-      <li>Contact</li>
-    </ul>
+  <div class="section">
+    <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div id="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+  </div>
+  <div class="footer">
+    <span class="copyright">&copy; Broadway 2017</span>
+    <p>
+      <a href="#home">Home</a>
+      <a href="#process">Process</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </p>
   </div>
   </body>
 </html>
